[package]
name = "axum-tws"
authors = ["Rob Wagner <rob@sombia.com>"]
license = "MIT OR Apache-2.0"
description = "A high-performance WebSocket backend for axum powered by tokio-websockets."
repository = "https://github.com/robertwayne/axum-tws"
categories = ["web-programming"]
keywords = ["axum", "tokio-websockets"]
readme = "README.md"
version = "0.6.0"
edition = "2021"

[features]
default = []
http2 = ["hyper/http2"]

[dependencies]
axum-core = "0.5"
base64 = "0.22"
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
http = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
sha1_smol = "1.0"
tokio = { version = "1", default-features = false }
tokio-websockets = { version = "0.13", features = ["server", "sha1_smol"] }

[dev-dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt", "macros"] }

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
